@@ -8,6 +8,10 @@ Revision history for Perl distribution PathTools.
    well-known and well-trusted location like /bin or /usr/bin . [Nick
    Ing-Simmons]
 
+ - On Win32 abs2rel($path, $base) was failing whenever $base is the
+   root of a volume (such as C:\ or \\share\dir).  This has been
+   fixed. [Reported by Bryan Daimler]
+
 3.14  Thu Nov 17 18:08:44 CST 2005
 
  - canonpath() has some logic in it that avoids collapsing a
